--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title></title>
+        <title>test Video</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -18,14 +18,12 @@
 
             <video id="my-player" class="video-js vjs-default-skin" controls preload="auto" width="640" height="264"
             data-setup="{}"> 
-                
-                <!-- <source src="http://cn1.rgwha.elcld.com/mp4-240/B1C98368-8E3E-25FB-A611-C455D74B5040_video.mp4?response-content-disposition=attachment%3B%20filename%3D%22video.mp4%22&AWSAccessKeyId=I0J6G456M87IARXGNTCP&Expires=1514668194&Signature=bSDzsVrppFrw54yN9aVUKbGKkS8%3D"> -->
-                    <source src="http://vjs.zencdn.net/v/oceans.mp4" type="video/mp4">
-                    <source src=http://techslides.com/demos/sample-videos/small.webm type=video/webm> 
+                <source src="http://cn1.rgwha.elcld.com/mp4-240/B1C98368-8E3E-25FB-A611-C455D74B5040_video.mp4?response-content-disposition=attachment%3B%20filename%3D%22video.mp4%22&AWSAccessKeyId=I0J6G456M87IARXGNTCP&Expires=1514668194&Signature=bSDzsVrppFrw54yN9aVUKbGKkS8%3D">
+                <source src="http://vjs.zencdn.net/v/oceans.mp4" type="video/mp4">
+                <source src=http://techslides.com/demos/sample-videos/small.webm type=video/webm> 
                 <source src=http://techslides.com/demos/sample-videos/small.ogv type=video/ogg> 
                 <source src=http://techslides.com/demos/sample-videos/small.mp4 type=video/mp4>
                 <source src=http://techslides.com/demos/sample-videos/small.3gp type=video/3gp>
-    
             </video>
             <!-- poster="MY_VIDEO_POSTER.jpg" -->
 
